[tool.pdm]

[project]
name = "prysm-test"
version = "0.1.0"
description = ""
authors = [
    {name = "phcreery", email = "phcreery@gmail.com"},
]
dependencies = [
    "prysm>=0.21.1",
    "jupyterlab>=3.6.2",
    "matplotlib>=3.7.1",
    "setuptools>=67.6.0",
]
requires-python = ">=3.8"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-pep517>=1.0"]
build-backend = "pdm.pep517.api"
